# optimization-lab

./: .gitignore  .pylintrc  gantt_test.py  linear_ordering_variable.py  predicted_demand_2years.csv  predicted_demand_2years.xlsx  pyproject.toml  time_index_variable.py
dss6019/: completion_time_variable.py  time_index_variable.py
iie2104/: 2-4.4.py  3-12.py  3-15.py  3-22.py  3-38-a.py  3-38-d.py  3-42.py  3-55.py  3-63.py  4-15.py  4-29.py  4-end.py  8-24-a.py  8-24-b.py  8-24-c.py  8-24-d.py  8-24-e.py  8-24-f.py  9-21.py  9-28.py  9-41.py  9-56-b.py
iie3105/: eoq.py  eoq2.py  fac-ware-per-period.py  fac-ware.py  fitting.py  hw2-1.py  hw2-2.py  hw3-1.py  hw3-2.py  hw4-2.py  hw4-3.py  predicted_demand_2years.csv  predicted_demand_2years.xlsx  test copy.py  test.py
iie3114/: 125701_20240510163214940_excel.xlsx  190001_202405_전기차등록현황.xls  TOTALSA.csv  ev station.csv  ev_registered.csv  ev_sales.csv  fcev_sales.csv  h2 station.csv  h2_registered.csv  oil station.csv  project.ipynb  total_car_registered.csv  total_sales.csv  국내수소차등록현황(연도별)_202405101634.xls  산업통상자원부_전국 주유소 등록현황_20231231.csv  한국가스공사_수소충전소 지역별 운영현황_20230801.csv  한국전력공사_충전소 이용을 위한 부가정보_20230718.csv
iie4117/: 1158db9a-47b3-49fe-b867-acb80e9da7a3.csv  5d5c80ed-af9a-4bee-8433-2510eb70f99a.csv  78c7e00c-4022-498e-bac3-e3430d430fdc.csv  Generalist medical practitioners.csv  Medical doctors.csv  Populations.csv  Specialist medical practitioners.csv  data.py  generalist practitioner.csv  korea hospital info.csv  korea hospital use rate.csv  korea population forecast.csv  medical doctor.csv  oecd data.csv  (+8 more)
(+102 files in other folders)
