[tool.poetry]
name = "optimization-lab"
version = "0.1.0"
description = ""
authors = ["eslerkang <eslerkang@gmail.com>"]
readme = "README.md"
packages = [{include = "optimization_lab"}]

[tool.poetry.dependencies]
python = "^3.11"
cvxpy = "^1.3.2"
numpy = "^1.25.1"
pandas = "^2.0.3"
simpy = "^4.0.1"
plotly = "^5.15.0"
matplotlib = "^3.7.2"
nbformat = "^5.9.1"
flask = "^2.3.2"
gurobipy = "^11.0.0"
ortools = "^9.9.3963"
scikit-learn = "^1.4.2"
deap = "^1.4.1"
dash = "^2.17.0"
seaborn = "^0.13.2"
scipy = "^1.14.1"
openpyxl = "^3.1.5"
fitter = "^1.7.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
